--- a/README
+++ b/README
@@ -1,12 +1,12 @@
 Latest iteration of flatland
 ---------------------------
-Flatland ARG!!! is an Augmented Reality Real Time Strategy (ARRTS) game based on Edward Abbot’s 1884 Sci-Fi novel Flatland. 
+Flatland ARG!!! is an Augmented Reality Real Time Strategy (ARRTS) game based on Edward Abbot's 1884 Sci-Fi novel Flatland. 
 The gameplay is similar to aspects of flashlight tag, capture the flag, Starcraft and Stratego. The game is played on a standard sized 
 soccer or football field. Each of the two teams has 3-6 players dressed in team costumes. The game has a fixed time limit and the winning team 
 is the one with the most total polygon sides at the end of play. Each player uses a cast scepter equipped with a Nokia Tablet and custom electronics. 
-Actions in the real world are represented in the virtual space. Teams can focus on gaining sides and on diminishing the opposing team’s sides using a 
+Actions in the real world are represented in the virtual space. Teams can focus on gaining sides and on diminishing the opposing team's sides using a 
 range of game actions including revealing invisible structures and players, building structures, gathering and transporting resources, destroying structures, 
-and attacking players. Some advanced actions require synchronized group “rituals” involving player positions and gesture patterns using the game scepter.
+and attacking players. Some advanced actions require synchronized group "rituals" involving player positions and gesture patterns using the game scepter.
 
 
 Read more about the game here:
